--- a/app/src/main/res/layout/fragment_lobby_view_row.xml
+++ b/app/src/main/res/layout/fragment_lobby_view_row.xml
@@ -9,7 +9,7 @@
 
     <TextView
             android:layout_width="223dp"
-            android:layout_height="52dp"
+            android:layout_height="wrap_content"
             android:text="" android:id="@+id/pseudoText"
             app:layout_constraintTop_toTopOf="parent"
             android:textSize="30sp"
