--- a/app/src/main/res/layout/activity_lobby.xml
+++ b/app/src/main/res/layout/activity_lobby.xml
@@ -13,7 +13,8 @@
             android:layout_height="532dp" app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/playerView"/>
+            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/playerView"
+            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="0.497"/>
     <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
