--- a/app/src/main/res/layout/fragment_fin_jeu.xml
+++ b/app/src/main/res/layout/fragment_fin_jeu.xml
@@ -2,13 +2,39 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
-             android:layout_height="match_parent"
-             tools:context=".FinJeuFragment">
-
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+             android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
+             tools:context=".FinJeuFragment"
+             android:background="#581305">
+    <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="@string/hello_blank_fragment"/>
+            android:layout_height="match_parent">
+
+        <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView7" tools:text="nom de la carte"
+                android:textAlignment="center" android:textColor="@color/colorBlanc" android:textSize="46sp"
+                app:layout_constraintStart_toStartOf="@+id/Cards"
+                app:layout_constraintEnd_toEndOf="@+id/Cards"
+                app:layout_constraintHorizontal_bias="0.475"
+                android:layout_marginEnd="8dp" android:layout_marginTop="80dp"
+                app:layout_constraintTop_toBottomOf="@+id/Cards" android:text="nom de la carte"/>
+        <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView5" tools:text="Le gagnant \n est ..."
+                android:textAlignment="center" android:textColor="@color/colorBlanc" android:textSize="46sp"
+                android:layout_marginTop="32dp"
+                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="44dp" app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginEnd="44dp" app:layout_constraintHorizontal_bias="0.5"
+                android:text="Le gagnant \n est ..."/>
+        <ImageView
+                android:layout_width="209dp"
+                android:layout_height="216dp" app:srcCompat="@drawable/loup_garou"
+                android:id="@+id/Cards"
+                app:layout_constraintEnd_toEndOf="@+id/textView5" app:layout_constraintStart_toStartOf="@+id/textView5"
+                android:layout_marginTop="59dp" app:layout_constraintTop_toBottomOf="@+id/textView5"/>
+    </android.support.constraint.ConstraintLayout>
 
 </FrameLayout>
