--- a/app/src/main/res/layout/fragment_player_view_row.xml
+++ b/app/src/main/res/layout/fragment_player_view_row.xml
@@ -10,7 +10,7 @@
     <TextView
             android:layout_width="223dp"
             android:layout_height="wrap_content"
-            android:text="coucou" android:id="@+id/pseudoText"
+            android:text="coucou" android:id="@+id/lobbyPseudoText"
             app:layout_constraintTop_toTopOf="parent"
             android:textSize="30sp"
             android:textColor="@android:color/white"
@@ -31,7 +31,7 @@
             android:text="@string/exclure"
             android:layout_width="125dp"
             android:layout_height="77dp"
-            android:id="@+id/joinButton" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
+            android:id="@+id/kickButton" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
             app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toTopOf="@+id/divider"/>
 
 </android.support.constraint.ConstraintLayout>
