--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -56,4 +56,14 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintVertical_bias="0.0" android:scaleType="fitCenter" android:contentDescription="@string/bouton_retour"/>
+    <CheckBox
+            android:text="Se souvenir de moi"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/rememberMeCheckBox" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/passwordContainerIn" android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toTopOf="@+id/loginButton"
+            app:layout_constraintStart_toStartOf="@+id/passwordContainerIn"
+            app:layout_constraintEnd_toEndOf="@+id/passwordContainerIn" android:textColor="@android:color/white"
+            style="@style/Widget.AppCompat.CompoundButton.CheckBox"/>
 </android.support.constraint.ConstraintLayout>
