--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,6 @@
     <color name="colorAccent">#F5F5F5</color>
     <color name="colorBlanc">#F5F5F5</color>
     <color name="dialogButtonText">#F44336</color>
-    <color name="colorBackground">#00581305</color>
+    <color name="colorBackground">#581305</color>
     <color name="blanc_casse">#FBC272</color>
 </resources>
