--- a/app/src/main/res/drawable-v21/buttonshape.xml
+++ b/app/src/main/res/drawable-v21/buttonshape.xml
@@ -12,5 +12,14 @@
     <stroke
             android:width="1dp"
             android:color="@color/blanc_casse"></stroke>
-
+    <ripple xmlns:android="http://schemas.android.com/apk/res/android"
+            android:color="@color/colorPrimaryDark">
+        <item>
+            <shape>
+                <padding android:padding="1dp" />
+                <corners android:radius="5dp" />
+                <solid android:color="@color/colorPrimary" />
+            </shape>
+        </item>
+    </ripple>
 </shape>
