--- a/app/src/main/res/layout/fragment_voyante.xml
+++ b/app/src/main/res/layout/fragment_voyante.xml
@@ -28,8 +28,7 @@
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
             android:id="@+id/voyanteRecyclerView"
             app:layout_constraintHorizontal_bias="0.5"
-            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/voyanteTimer"
-    />
+            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/voyanteTimer"/>
     <TextView
             android:text="@string/selectionnez_un_joueur"
             android:layout_width="296dp"
