--- a/app/src/main/res/layout/fragment_pipoted.xml
+++ b/app/src/main/res/layout/fragment_pipoted.xml
@@ -6,21 +6,11 @@
                                              android:layout_height="match_parent"
                                              android:background="@drawable/background3">
 
-    <com.mikhaellopez.circularimageview.CircularImageView
-            android:id="@+id/avatarPlayerLove"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-            app:civ_border_color="@color/blanc_casse"
-            app:civ_border_width="4dp"
-            app:layout_constraintStart_toStartOf="@+id/messageLove"
-            app:layout_constraintTop_toBottomOf="@+id/messageLove"
-            android:layout_marginTop="72dp" app:layout_constraintEnd_toEndOf="@+id/messageLove"
-            app:layout_constraintHorizontal_bias="0.485"/>
     <TextView
             android:text="5"
             android:layout_width="53dp"
             android:layout_height="53dp"
-            android:id="@+id/loveTimer" android:textSize="36sp"
+            android:id="@+id/pipotedTimer" android:textSize="36sp"
             app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="16dp"
             app:layout_constraintEnd_toEndOf="parent" android:textColor="@color/blanc_casse" android:textStyle="bold"
             android:background="@drawable/pseudoshape"
@@ -32,21 +22,18 @@
     <TextView
             android:layout_width="220dp"
             android:layout_height="wrap_content"
-            android:id="@+id/messageLove" android:layout_marginTop="152dp"
-            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintHorizontal_bias="0.497" app:layout_constraintEnd_toEndOf="parent"
+            android:id="@+id/messagePipoted"
             android:textAlignment="center" android:textSize="36sp" android:textColor="@color/blanc_casse"
             android:shadowColor="@color/colorPrimaryDark"
             android:shadowDx="2"
             android:shadowDy="2"
-            android:shadowRadius="5" android:textStyle="bold"/>
-    <TextView
-            android:layout_width="220dp"
-            android:layout_height="37dp"
-            android:id="@+id/pseudoLove" app:layout_constraintEnd_toEndOf="@+id/avatarPlayerLove"
-            app:layout_constraintStart_toStartOf="@+id/avatarPlayerLove"
-            app:layout_constraintTop_toBottomOf="@+id/avatarPlayerLove"
-            android:background="@color/transparentBackground" android:textSize="24sp"
-            android:textColor="@color/colorBlanc"
-            android:textAlignment="center"/>
+            android:shadowRadius="5" android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="@+id/imageView5" app:layout_constraintEnd_toEndOf="@+id/imageView5"
+            android:layout_marginTop="12dp" app:layout_constraintTop_toBottomOf="@+id/imageView5"/>
+    <ImageView
+            app:srcCompat="@drawable/pipoteur"
+            android:id="@+id/imageView5"
+            android:layout_width="200dp" android:layout_height="200dp" android:layout_marginTop="176dp"
+            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"/>
 </android.support.constraint.ConstraintLayout>
