--- a/app/src/main/res/layout/fragment_print_dead.xml
+++ b/app/src/main/res/layout/fragment_print_dead.xml
@@ -28,7 +28,7 @@
             android:shadowDy="2"
             android:shadowRadius="5"
             app:layout_constraintStart_toStartOf="parent"
-            android:textAlignment="textStart"
+            android:textAlignment="center"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="8dp"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="28dp"
