--- a/app/src/main/res/layout/fragment_vote_jour.xml
+++ b/app/src/main/res/layout/fragment_vote_jour.xml
@@ -26,4 +26,17 @@
             app:layout_constraintBottom_toTopOf="@+id/voteRecyclerView"
             android:textColor="@color/blanc_casse" app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintHorizontal_bias="1.0" android:layout_marginStart="8dp"/>
+    <TextView
+            android:layout_width="226dp"
+            android:layout_height="279dp"
+            android:id="@+id/noPlayerAliveMessage" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp" android:textSize="30sp" android:textColor="@color/blanc_casse"
+            android:textStyle="bold" android:textAlignment="center"
+            android:shadowColor="@color/colorPrimaryDark"
+            android:shadowDx="2"
+            android:shadowDy="2"
+            android:shadowRadius="5"/>
 </android.support.constraint.ConstraintLayout>
