--- a/app/src/main/res/layout/dead_vote_view_row.xml
+++ b/app/src/main/res/layout/dead_vote_view_row.xml
@@ -17,7 +17,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
             app:cardBackgroundColor="@color/transparentBackground"
-    >
+            app:layout_constraintHorizontal_bias="0.4">
 
         <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
@@ -61,6 +61,14 @@
                     app:layout_constraintEnd_toEndOf="@+id/avatarPlayerDead"
                     android:textColor="@color/colorPrimaryDark" app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintTop_toBottomOf="@+id/pseudoPlayerDead"/>
+            <ImageView
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:id="@+id/loveIcon" android:layout_marginTop="8dp"
+                    app:layout_constraintTop_toBottomOf="@+id/avatarPlayerDead"
+                    app:layout_constraintBottom_toTopOf="@+id/rolePlayerDead"
+                    app:layout_constraintEnd_toEndOf="@+id/pseudoPlayerDead" android:layout_marginEnd="8dp"
+                    app:layout_constraintVertical_bias="1.0"/>
         </android.support.constraint.ConstraintLayout>
     </android.support.v7.widget.CardView>
 </android.support.constraint.ConstraintLayout>
