--- a/app/src/main/res/layout/dead_vote_view_row.xml
+++ b/app/src/main/res/layout/dead_vote_view_row.xml
@@ -64,11 +64,10 @@
             <ImageView
                     android:layout_width="25dp"
                     android:layout_height="25dp"
-                    android:id="@+id/loveIcon" android:layout_marginTop="8dp"
-                    app:layout_constraintTop_toBottomOf="@+id/avatarPlayerDead"
-                    app:layout_constraintBottom_toTopOf="@+id/rolePlayerDead"
-                    app:layout_constraintEnd_toEndOf="@+id/pseudoPlayerDead" android:layout_marginEnd="8dp"
-                    app:layout_constraintVertical_bias="1.0"/>
+                    android:id="@+id/loveIcon"
+                    app:layout_constraintEnd_toEndOf="@+id/pseudoPlayerDead"
+                    android:layout_marginEnd="8dp"
+                    app:layout_constraintBottom_toBottomOf="@+id/avatarPlayerDead"/>
         </android.support.constraint.ConstraintLayout>
     </android.support.v7.widget.CardView>
 </android.support.constraint.ConstraintLayout>
